Revert "fix text in timeline cut off on the right"
This reverts commit 2c72239fe4a5199d610efbe46900df96783fa677.

The fixed caused the layout to be wrong on large screen sizes.

--- a/style.css
+++ b/style.css
@@ -767,10 +767,6 @@ section cv
     }
 }
 
-.timepoint * {
-    margin-right: 10px;
-}
-
 .timepoint-entry p {
     margin-top: 8px;
 }
